tests/asm-link/nested-macrodef/rgbasm.err
[-Wuser] warning: Nested macros shouldn't work, whose argument would be \1?
    ╭─[ test.asm:22:2 ]
    │
 22 │     WARN "Nested macros shouldn't work, whose argument would be \\1?"
    │     ──┬─  
    │       ╰─── triggered here
    │ 
 26 │     outer
    │     ──┬──  
    │       ╰──── macro called here
────╯
error: unterminated macro definition
    ╭─[ test.asm:23:7 ]
    │
 23 │ MACRO inner
    │       ──┬──  
    │         ╰──── macro definition starting here
    │ 
 26 │     outer
    │     ──┬──  
    │       ╰──── macro called here
────╯
1 error generated.
